# DiFinder

./: BUILD.md  CMakeLists.txt  Makefile.linux  Makefile.macosx  Makefile.win  README.md  build_all.bat  cp_exefile.bat  cp_exefile.sh  difinder.doxy
Eclipse/linux/difinder/: .cproject  .project
Eclipse/win/difinder/: .cproject  .project
VC++2010/: difinder.vcxproj  difinder.vcxproj.filters  wxwidgets.props
VC++2013/: difinder.vcxproj  difinder.vcxproj.filters
VC++2015/: difinder.vcxproj
Xcode/difinder/difinder.xcodeproj/: project.pbxproj
data/: basic_types.xml  boot_types.xml  category_types.xml  disk_types.xml  file_types.xml
docs/: BasicSpec.txt  ChangeLog.txt  Readme.txt
lang/ja/: difinder.mo  difinder.po
src/: common.h  config.cpp  config.h  main.cpp  main.h  parambase.cpp  parambase.h  utils.cpp  utils.h  version.h  zz_category.h
src/basicfmt/: basiccommon.cpp  basiccommon.h  basicdir.cpp  basicdir.h  basicdiritem.cpp  basicdiritem.h  basicdiritem_hfs.cpp  basicdiritem_hfs.h  basicdiritem_hu68k.cpp  basicdiritem_hu68k.h  basicdiritem_msdos.cpp  basicdiritem_msdos.h  basicdiritem_os9.cpp  basicdiritem_os9.h  basicerror.cpp  basicerror.h  basicfat.cpp  basicfat.h  basicfmt.cpp  basicfmt.h  basicparam.cpp  basicparam.h  basictemplate.cpp  basictemplate.h  basictype.cpp  basictype.h  basictype_fat12.h  basictype_fat16.cpp  basictype_fat16.h  basictype_fat_base.cpp  basictype_fat_base.h  basictype_hfs.cpp  basictype_hu68k.cpp  basictype_hu68k.h  basictype_msdos.cpp  basictype_msdos.h  basictype_os9.cpp  basictype_os9.h
src/diskimg/: bootparam.cpp  bootparam.h  bootparser.cpp  bootparser.h  diskcommon.cpp  diskcommon.h  diskd88.cpp  diskd88.h  diskd88creator.cpp  diskd88parser.cpp  diskd88parser.h  diskd88writer.cpp  diskhddparser.cpp  diskhddparser.h  diskhdiparser.cpp  diskhdiparser.h  diskimage.cpp  diskimage.h  disknhdparser.cpp  disknhdparser.h  diskparam.cpp  diskparam.h  diskparser.cpp  diskparser.h  diskplain.cpp  diskplain.h  diskplaincreator.cpp  diskplaincreator.h  diskplainparser.cpp  diskplainparser.h  diskplainwriter.cpp  diskplainwriter.h  diskresult.cpp  diskresult.h  diskthdparser.cpp  diskthdparser.h  diskwriter.cpp  diskwriter.h  fileparam.cpp  fileparam.h
src/res/: Info.plist  difinder.icns  difinder.rc  difinder.xpm  hd_part_16.xpm  hd_part_16_export.xpm  hd_part_16_import.xpm  hdd_16.xpm  hdd_16_new.xpm  hdd_16_open.xpm
src/ui/: basicparambox.cpp  basicselbox.cpp  bootselbox.cpp  bootselbox.h  configbox.cpp  configbox.h  diskparambox.cpp  diskparambox.h  intnamebox.cpp  intnamebox.h  partitionbox.cpp  partitionbox.h  rawexpbox.cpp  rawexpbox.h  rawtrackbox.cpp  uibindump.cpp  uibindump.h  uicdlistctrl.cpp  uicdlistctrl.h  uicdtreectrl.cpp  uicdtreectrl.h  uiclistctrl.cpp  uiclistctrl.h  uictreectrl.cpp  uictreectrl.h  uidiskattr.cpp  uidiskattr.h  uidisklist.cpp  uidisklist.h  uifatarea.cpp  uifilelist.cpp  uifilelist.h  uimainframe.cpp  uimainframe.h  uirawdisk.cpp  uirawdisk.h
